# reviews

./: Cargo.toml  README.ja.md  README.md
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  release.yml
hooks/: install.sh  wrapper.sh
src/: config.rs  main.rs  project.rs  resolve.rs  sanitize.rs  test_utils.rs  traverse.rs
src/tools/: knip.rs  markuplint.rs  mod.rs  oxlint.rs
tests/: integration.rs
