[package]
name = "reviews"
version = "0.4.0"
edition = "2024"
description = "Claude Code PreToolUse hook for parallel static analysis"
license = "MIT"
repository = "https://github.com/thkt/reviews"

[[bin]]
name = "reviews"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
