[package]
name = "reviews"
version = "0.8.0"
edition = "2024"
description = "Claude Code PreToolUse hook for parallel static analysis"
license = "MIT"
repository = "https://github.com/thkt/reviews"

[[bin]]
name = "reviews"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = ">=1"
regex = ">=1"

[lints.rust]
# 本質的にunsafeが必要な箇所(src/tools/mod.rs の kill(2) 呼び出し)のみ
# #[allow(unsafe_code)] で局所例外。forbid だと例外を許可できないため deny
unsafe_code = "deny"

[lints.clippy]
# フルパス使用検出
absolute_paths = "deny"
# Rustイディオム (RUST.md idioms table)
cast_possible_truncation = "deny"
redundant_closure_for_method_calls = "deny"
filter_map_next = "deny"
flat_map_option = "deny"
manual_filter_map = "deny"
manual_find_map = "deny"
# インポート
wildcard_imports = "deny"
enum_glob_use = "deny"
# 文字列
str_to_string = "deny"
# 引数
needless_pass_by_value = "deny"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
